--- a/main.html
+++ b/main.html
@@ -1,214 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Smart Burme AI</title>
-<style>
-  body {
-    margin: 0;
-    background: linear-gradient(to right, #6dd5fa, #2980b9);
-    font-family: Arial, sans-serif;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    min-height: 100vh;
-  }
-
-  h1 {
-    margin-bottom: 1em;
-  }
-
-  label {
-    margin-top: 1em;
-    font-weight: bold;
-  }
-
-  input[type="file"],
-  input[type="text"] {
-    margin-top: 0.5em;
-    padding: 0.5em;
-    font-size: 1em;
-    width: 90%;
-    max-width: 320px;
-    border-radius: 6px;
-    border: none;
-  }
-
-  .generate-btn {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 0.8em 2em;
-    font-size: 1.1em;
-    border: none;
-    border-radius: 30px;
-    background-color: #0044cc;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  }
-
-  .generate-btn:disabled {
-    background-color: #8888ff;
-    cursor: not-allowed;
-  }
-
-  #videoContainer {
-    margin-top: 2em;
-    width: 100%;
-    max-width: 320px;
-    height: 240px;
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    box-shadow: 0 0 10px #0000cc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #outputVideo {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 8px;
-  }
-
-  #message {
-    margin-top: 1em;
-    font-style: italic;
-    color: #eeeeff;
-  }
-</style>
-</head>
-<body>
-
-<h1>Smart Burme AI</h1>
-
-<label for="imageInput">Select Image</label>
-<input type="file" id="imageInput" accept="image/*" />
-
-<label for="promptInput">Prompt Text</label>
-<input type="text" id="promptInput" placeholder="Enter your prompt..." />
-
-<div id="videoContainer">
-  <video id="outputVideo" controls autoplay loop muted></video>
-</div>
-
-<div id="message"></div>
-
-<button id="generateBtn" class="generate-btn" disabled>Generate Video</button>
-
-<script>
-  const imageInput = document.getElementById('imageInput');
-  const promptInput = document.getElementById('promptInput');
-  const generateBtn = document.getElementById('generateBtn');
-  const outputVideo = document.getElementById('outputVideo');
-  const message = document.getElementById('message');
-
-  let imageFile = null;
-
-  function updateGenerateButton() {
-    generateBtn.disabled = !imageFile || !promptInput.value.trim();
-  }
-
-  imageInput.addEventListener('change', (e) => {
-    if (e.target.files.length > 0) {
-      imageFile = e.target.files[0];
-    } else {
-      imageFile = null;
-    }
-    updateGenerateButton();
-    outputVideo.src = '';
-    message.textContent = '';
-  });
-
-  promptInput.addEventListener('input', () => {
-    updateGenerateButton();
-  });
-
-  async function generateVideoFromImageAndPrompt(imageFile, promptText) {
-    const canvas = document.createElement('canvas');
-    const ctx = canvas.getContext('2d');
-
-    const img = await new Promise((resolve, reject) => {
-      const tempImg = new Image();
-      tempImg.onload = () => resolve(tempImg);
-      tempImg.onerror = () => reject(new Error('Failed to load image'));
-      tempImg.src = URL.createObjectURL(imageFile);
-    });
-
-    const maxWidth = 640;
-    const maxHeight = 480;
-    let scale = Math.min(maxWidth / img.width, maxHeight / img.height, 1);
-    canvas.width = img.width * scale;
-    canvas.height = img.height * scale;
-
-    const stream = canvas.captureStream(30);
-    const recordedChunks = [];
-    const mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm' });
-
-    mediaRecorder.ondataavailable = function(e) {
-      if (e.data.size > 0) recordedChunks.push(e.data);
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Burme AI</title>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage-compat.js"></script>
+  <!-- Firebase Configuration -->
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
     };
-
-    const totalFrames = 90;
-    let frame = 0;
-
-    function drawFrame() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      const alpha = Math.min(frame / totalFrames, 1);
-      ctx.globalAlpha = alpha;
-      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-      ctx.font = 'bold 30px Arial';
-      ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
-      ctx.textAlign = 'center';
-      const x = canvas.width / 2;
-      const y = canvas.height - 40 + 10 * Math.sin(frame / 10);
-      ctx.fillText(promptText, x, y);
-      ctx.globalAlpha = 1;
-
-      frame++;
-      if (frame < totalFrames) {
-        requestAnimationFrame(drawFrame);
-      } else {
-        mediaRecorder.stop();
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  <!-- Styles -->
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+      background: linear-gradient(135deg, #6fb1fc, #4364f7);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      min-height: 100vh;
+    }
+    h1 {
+      margin-bottom: 0.5em;
+      text-align: center;
+    }
+    label {
+      margin-top: 1em;
+      font-weight: bold;
+    }
+    input[type="file"], input[type="text"] {
+      margin-top: 0.5em;
+      padding: 0.5em;
+      font-size: 1em;
+      width: 90%;
+      max-width: 300px;
+      border-radius: 4px;
+      border: none;
+    }
+    button {
+      margin-top: 1.5em;
+      padding: 0.75em 1.5em;
+      font-size: 1.1em;
+      border: none;
+      border-radius: 4px;
+      background-color: #0044cc;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s ease-in-out;
+    }
+    button:disabled {
+      background-color: #8888ff;
+      cursor: not-allowed;
+    }
+    button:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+    #videoContainer {
+      margin-top: 2em;
+      width: 320px;
+      height: 240px;
+      background-color: #222288;
+      border-radius: 8px;
+      box-shadow: 0 0 15px #0000cc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    #outputVideo {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 8px;
+    }
+    #message {
+      margin-top: 1em;
+      font-style: italic;
+      color: #ddddff;
+    }
+    /* Floating Animation */
+    @keyframes float {
+      0% {
+        transform: translateY(0px);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
+      100% {
+        transform: translateY(0px);
       }
     }
+    .floating {
+      animation: float 3s ease-in-out infinite;
+    }
+    /* Responsive Design */
+    @media (max-width: 600px) {
+      input[type="file"], input[type="text"] {
+        width: 100%;
+      }
+      #videoContainer {
+        width: 100%;
+        height: auto;
+      }
+    }
+  </style>
+</head>
+<body>
+  <h1>Smart Burme AI</h1>
 
-    mediaRecorder.start();
-    drawFrame();
+  <label for="imageInput">Select Image to Generate Video</label>
+  <input type="file" id="imageInput" accept="image/*" />
 
-    await new Promise(resolve => {
-      mediaRecorder.onstop = resolve;
+  <label for="promptInput">Enter Prompt Text</label>
+  <input type="text" id="promptInput" placeholder="Enter your prompt here..." />
+
+  <button id="generateBtn" disabled class="floating">Generate Video</button>
+
+  <div id="videoContainer" aria-label="Generated video preview">
+    <video id="outputVideo" controls autoplay loop muted></video>
+  </div>
+
+  <div id="message"></div>
+
+  <!-- Scripts -->
+  <script>
+    const imageInput = document.getElementById('imageInput');
+    const promptInput = document.getElementById('promptInput');
+    const generateBtn = document.getElementById('generateBtn');
+    const outputVideo = document.getElementById('outputVideo');
+    const message = document.getElementById('message');
+
+    let imageFile = null;
+
+    function updateGenerateButton() {
+      generateBtn.disabled = !imageFile || !promptInput.value.trim();
+    }
+
+    imageInput.addEventListener('change', (e) => {
+      if (e.target.files.length > 0) {
+        imageFile = e.target.files[0];
+      } else {
+        imageFile = null;
+      }
+      updateGenerateButton();
+      outputVideo.src = '';
+      message.textContent = '';
     });
 
-    const videoBlob = new Blob(recordedChunks, { type: 'video/webm' });
-    const videoUrl = URL.createObjectURL(videoBlob);
-    return videoUrl;
-  }
+    promptInput.addEventListener('input', () => {
+      updateGenerateButton();
+    });
 
-  generateBtn.addEventListener('click', async () => {
-    if (!imageFile || !promptInput.value.trim()) return;
-    generateBtn.disabled = true;
-    message.textContent = 'Generating video, please wait...';
-    outputVideo.src = '';
-    outputVideo.style.display = 'none';
-    try {
-      const videoUrl = await generateVideoFromImageAndPrompt(imageFile, promptInput.value.trim());
-      outputVideo.src = videoUrl;
-      outputVideo.style.display = 'block';
-      message.textContent = 'Video generated below:';
-    } catch (err) {
-      console.error(err);
-      message.textContent = 'Error generating video. Please try again.';
-    } finally {
-      generateBtn.disabled = false;
+    async function generateVideoFromImageAndPrompt(imageFile, promptText) {
+      const canvas = document.createElement('canvas');
+      const ctx = canvas.getContext('2d');
+
+      const img = await new Promise((resolve, reject) => {
+        const tempImg = new Image();
+        tempImg.onload = () => resolve(tempImg);
+        tempImg.onerror = () => reject(new Error('Failed to load image'));
+        tempImg.src = URL.createObjectURL(imageFile);
+      });
+
+      const maxWidth = 640;
+      const maxHeight = 480;
+      let scale = Math.min(maxWidth / img.width, maxHeight / img.height, 1);
+      canvas.width = img.width * scale;
+      canvas.height = img.height * scale;
+
+      const stream = canvas.captureStream(30);
+      const recordedChunks = [];
+      const mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm' });
+
+      mediaRecorder.ondataavailable = function(e) {
+        if (e.data.size > 0) recordedChunks.push(e.data);
+      };
+
+      const totalFrames = 90;
+      let frame = 0;
+
+      function drawFrame() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        const alpha = Math.min(frame / totalFrames, 1);
+        ctx.globalAlpha = alpha;
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        ctx.font = 'bold 30px Arial';
+        ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
+        ctx.textAlign = 'center';
+        const x = canvas.width / 2;
+        const y = canvas.height - 40 + 10 * Math.sin(frame / 10);
+        ctx.fillText(promptText, x, y);
+        ctx.globalAlpha = 1;
+
+        frame++;
+        if (frame < totalFrames) {
+          requestAnimationFrame(drawFrame);
+        } else {
+          mediaRecorder.stop();
+        }
+      }
+
+      mediaRecorder.start();
+      drawFrame();
+
+      await new Promise(resolve => {
+        mediaRecorder.onstop = resolve;
+      });
+
+      const videoBlob = new Blob(recordedChunks, { type: 'video/webm' });
+      const videoUrl = URL.createObjectURL(videoBlob);
+      return videoUrl;
     }
-  });
-</script>
 
+    generateBtn.addEventListener('click', async () => {
+      if (!imageFile || !promptInput.value.trim()) return;
+      generateBtn.disabled = true;
+      message.textContent = 'Generating video, please wait...';
+      outputVideo.src = '';
+      outputVideo.style.display = 'none';
+      try {
+        const videoUrl = await generateVideoFromImageAndPrompt(imageFile, promptInput.value.trim());
+        outputVideo.src = videoUrl;
+        outputVideo.style.display = 'block';
+        message.textContent = 'Video generated below:';
+      } catch (err) {
+        console.error(err);
+        message.textContent = 'Error generating video. Please try again.';
+      } finally {
+        generateBtn.disabled = false;
+      }
+    });
+  </script>
 </body>
 </html>
