--- a/main.html
+++ b/main.html
@@ -1,116 +1,252 @@
 <!DOCTYPE html>
 <html lang="my">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Video Generator</title>
-    
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Burme AI</title>
 
-    <!-- Custom CSS -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(45deg, #00b3b3, #0066cc);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-        }
-        .container {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 30px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            transform-style: preserve-3d;
-            animation: float3D 4s ease-in-out infinite;
-        }
-        @keyframes float3D {
-            0% { transform: rotateX(10deg) rotateY(0deg); }
-            50% { transform: rotateX(-10deg) rotateY(180deg); }
-            100% { transform: rotateX(10deg) rotateY(360deg); }
-        }
-        button {
-            padding: 15px 30px;
-            font-size: 18px;
-            background-color: #0066cc;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #00b3b3;
-        }
-    </style>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-storage.js"></script>
+
+  <!-- Firebase Configuration -->
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <!-- Styles -->
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+      background: linear-gradient(135deg, #6fb1fc, #4364f7);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      min-height: 100vh;
+    }
+    h1 {
+      margin-bottom: 0.5em;
+      text-align: center;
+    }
+    label {
+      margin-top: 1em;
+      font-weight: bold;
+    }
+    input[type="file"], input[type="text"] {
+      margin-top: 0.5em;
+      padding: 0.5em;
+      font-size: 1em;
+      width: 90%;
+      max-width: 300px;
+      border-radius: 4px;
+      border: none;
+    }
+    button {
+      margin-top: 1.5em;
+      padding: 0.75em 1.5em;
+      font-size: 1.1em;
+      border: none;
+      border-radius: 4px;
+      background-color: #0044cc;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s ease-in-out;
+    }
+    button:disabled {
+      background-color: #8888ff;
+      cursor: not-allowed;
+    }
+    button:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+    #videoContainer {
+      margin-top: 2em;
+      width: 320px;
+      height: 240px;
+      background-color: #222288;
+      border-radius: 8px;
+      box-shadow: 0 0 15px #0000cc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    #outputVideo {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 8px;
+    }
+    #message {
+      margin-top: 1em;
+      font-style: italic;
+      color: #ddddff;
+    }
+    .floating {
+      animation: float 3s ease-in-out infinite;
+    }
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0px); }
+    }
+    footer {
+      margin-top: 2em;
+      font-size: 0.9em;
+      color: #cccccc;
+    }
+    @media (max-width: 600px) {
+      input[type="file"], input[type="text"] {
+        width: 100%;
+      }
+      #videoContainer {
+        width: 100%;
+        height: auto;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>AI Image to Video Generator</h1>
-        <p>Click below to generate a video from images.</p>
-        <button id="generateButton">Generate Video</button>
-    </div>
+  <h1>Smart Burme AI</h1>
 
-    <!-- Firebase Configuration -->
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-            authDomain: "smart-burme-app.firebaseapp.com",
-            projectId: "smart-burme-app",
-            storageBucket: "smart-burme-app.appspot.com",
-            messagingSenderId: "851502425686",
-            appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-        };
+  <label for="imageInput">ပုံရွေးပါ</label>
+  <input type="file" id="imageInput" accept="image/*" />
 
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-    </script>
+  <label for="promptInput">စာသားထည့်ပါ</label>
+  <input type="text" id="promptInput" placeholder="သင့်စာသားကို ထည့်ပါ..." />
 
-    <!-- JavaScript to Handle Video Generation -->
-    <script>
-        document.getElementById('generateButton').addEventListener('click', function() {
-            let imageUrls = [
-                "https://www.someimage.net/image1.jpg", // Example URL
-                "https://www.someimage.net/image2.jpg", // Example URL
-                "https://www.someimage.net/image3.jpg"  // Example URL
-            ];
+  <button id="generateBtn" disabled class="floating">ဗီဒီယိုဖန်တီးပါ</button>
 
-            let videoData = {
-                "data": [
-                    { "url": imageUrls[0], "delay": "3" },
-                    { "url": imageUrls[1], "delay": "5" },
-                    { "url": imageUrls[2], "delay": "4" }
-                ],
-                "width": "760",
-                "height": "400"
-            };
+  <div id="videoContainer" aria-label="Generated video preview">
+    <video id="outputVideo" controls autoplay loop muted></video>
+  </div>
 
-            fetch('https://udayogra-images-to-video-v1.p.rapidapi.com/am?state=videoapi', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'x-rapidapi-host': 'udayogra-images-to-video-v1.p.rapidapi.com',
-                    'x-rapidapi-key': '9ec23714c0msh35458bdb9c8cf0ap1838d4jsna264c2f5d83d'
-                },
-                body: JSON.stringify(videoData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log("Video generated", data);
-                alert("Video generation complete!");
-            })
-            .catch(error => {
-                console.error("Error generating video:", error);
-                alert("Video generation failed!");
-            });
-        });
-    </script>
+  <div id="message"></div>
+
+  <footer>
+    Deployment by Aung Myo Kyaw
+  </footer>
+
+  <!-- Scripts -->
+  <script>
+    const imageInput = document.getElementById('imageInput');
+    const promptInput = document.getElementById('promptInput');
+    const generateBtn = document.getElementById('generateBtn');
+    const outputVideo = document.getElementById('outputVideo');
+    const message = document.getElementById('message');
+
+    let imageFile = null;
+
+    function updateGenerateButton() {
+      generateBtn.disabled = !imageFile || !promptInput.value.trim();
+    }
+
+    imageInput.addEventListener('change', (e) => {
+      if (e.target.files.length > 0) {
+        imageFile = e.target.files[0];
+      } else {
+        imageFile = null;
+      }
+      updateGenerateButton();
+      outputVideo.src = '';
+      message.textContent = '';
+    });
+
+    promptInput.addEventListener('input', () => {
+      updateGenerateButton();
+    });
+
+    async function generateVideoFromImageAndPrompt(imageFile, promptText) {
+      const canvas = document.createElement('canvas');
+      const ctx = canvas.getContext('2d');
+
+      const img = await new Promise((resolve, reject) => {
+        const tempImg = new Image();
+        tempImg.onload = () => resolve(tempImg);
+        tempImg.onerror = () => reject(new Error('ပုံတင်ရန် မအောင်မြင်ပါ'));
+        tempImg.src = URL.createObjectURL(imageFile);
+      });
+
+      const maxWidth = 640;
+      const maxHeight = 480;
+      let scale = Math.min(maxWidth / img.width, maxHeight / img.height, 1);
+      canvas.width = img.width * scale;
+      canvas.height = img.height * scale;
+
+      const stream = canvas.captureStream(30);
+      const recordedChunks = [];
+      const mediaRecorder = new MediaRecorder(stream, { mimeType: 'video/webm' });
+
+      mediaRecorder.ondataavailable = function(e) {
+        if (e.data.size > 0) recordedChunks.push(e.data);
+      };
+
+      const totalFrames = 90;
+      let frame = 0;
+
+      function drawFrame() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        const alpha = Math.min(frame / totalFrames, 1);
+        ctx.globalAlpha = alpha;
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        ctx.font = 'bold 30px Arial';
+        ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
+        ctx.textAlign = 'center';
+        const x = canvas.width / 2;
+        const y = canvas.height - 40 + 10 * Math.sin(frame / 10);
+        ctx.fillText(promptText, x, y);
+        ctx.globalAlpha = 1;
+
+        frame++;
+        if (frame < totalFrames) {
+          requestAnimationFrame(drawFrame);
+        } else {
+          mediaRecorder.stop();
+        }
+      }
+
+      mediaRecorder.start();
+      drawFrame();
+
+      await new Promise(resolve => {
+        mediaRecorder.onstop = resolve;
+      });
+
+      const videoBlob = new Blob(recordedChunks, { type: 'video/webm' });
+      const videoUrl = URL.createObjectURL(videoBlob);
+      return videoUrl;
+    }
+
+    generateBtn.addEventListener('click', async () => {
+      if (!imageFile || !promptInput.value.trim()) return;
+      generateBtn.disabled = true;
+      message.textContent = 'ဗီဒီယိုဖန်တီးနေသည်၊ ခဏစောင့်ပါ...';
+      outputVideo.src = '';
+      outputVideo.style.display = 'none';
+      try {
+        const videoUrl = await generateVideoFromImageAndPrompt(imageFile, promptInput.value.trim());
+        outputVideo.src = videoUrl;
+        outputVideo.style.display = 'block';
+        message.textContent = 'ဗီဒီယိုဖန်တီးပြီးပါပြီ:';
+      } catch (err) {
+        console.error(err);
+        message.textContent = 'ဗီဒီယိုဖန်တီးမှုအတွက် အမှားတစ်ခု ဖြစ်ပွားခဲ့သည်။ ကျေးဇူးပြု၍ ထပ်မံကြိုးစားပါ။';
+      } finally {
+        generateBtn.disabled = false;
+      }
+    });
+  </script>
 </body>
 </html>
