--- a/main.html
+++ b/main.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="my">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Burme</title>
+
+    <!-- Firebase Configuration -->
+    <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-firestore.js"></script>
+
+    <script>
+        // Firebase အတည်ပြုချက်
+        const firebaseConfig = {
+            apiKey: "YOUR_NEW_API_KEY",  // အသစ်ပြောင်းထားသော API Key
+            authDomain: "smart-burme-app.firebaseapp.com",
+            projectId: "smart-burme-app",
+            storageBucket: "smart-burme-app.appspot.com",
+            messagingSenderId: "YOUR_SENDER_ID",
+            appId: "YOUR_APP_ID",
+            measurementId: "YOUR_MEASUREMENT_ID"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const firestore = firebase.firestore();
+    </script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -103,9 +126,25 @@
     </footer>
 
     <script>
+        // Handle Firebase Authentication (Simple login example)
+        firebase.auth().onAuthStateChanged(user => {
+            if (user) {
+                console.log('User logged in:', user);
+            } else {
+                console.log('User not logged in');
+            }
+        });
+
         // Handle the button click to generate the video
         document.getElementById('generateButton').addEventListener('click', function() {
-            // You can replace this with your video generation code using the API
+            // Firebase Authentication check
+            const user = firebase.auth().currentUser;
+            if (!user) {
+                alert('You must be logged in to generate videos.');
+                return;
+            }
+
+            // Image upload
             const fileInput = document.getElementById('fileInput');
             const file = fileInput.files[0];
             if (!file) {
@@ -113,13 +152,40 @@
                 return;
             }
 
-            // Assuming the API returns a video link after processing
-            const videoLink = "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/video_generations/ddde786a-a9cb-499f-83d9-f4fa45664404.gif"; // Placeholder
+            // Placeholder for AI API request (sending to your AI model)
+            const formData = {
+                key: "sDDYd3VavSHfaW63nsK5kiLiCGvUpBMwBJv6TTOrP6wzl4HbRBtjebc9xCsB", // AI API Key
+                model_id: "svd", // Model ID
+                init_image: "YOUR_UPLOADED_IMAGE_URL", // Image URL ကို upload ထားပြီးမှ အသုံးပြုပါ
+                height: 512,
+                width: 512,
+                num_frames: 25,
+                num_inference_steps: 20,
+                min_guidance_scale: 1,
+                max_guidance_scale: 3,
+                motion_bucket_id: 20,
+                noise_aug_strength: 0.02,
+                webhook: null,
+                track_id: null
+            };
 
-            // Show the generated video
-            const videoOutput = document.getElementById('videoOutput');
-            videoOutput.src = videoLink;
-            videoOutput.style.display = "block";
+            // Fetch the API and display the result
+            fetch("https://modelslab.com/api/v6/video/img2video", {
+                method: 'POST',
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(formData)
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                const videoLink = data.output[0]; // Assuming the response has this structure
+                const videoOutput = document.getElementById('videoOutput');
+                videoOutput.src = videoLink;
+                videoOutput.style.display = "block";
+            })
+            .catch(error => console.error('Error:', error));
         });
     </script>
 
