--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
     <script>
         // Firebase အတည်ပြုချက်
         const firebaseConfig = {
-            apiKey: "YOUR_NEW_API_KEY",  // အသစ်ပြောင်းထားသော API Key
-            authDomain: "smart-burme-app.firebaseapp.com",
-            projectId: "smart-burme-app",
-            storageBucket: "smart-burme-app.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
-        };
+    apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+    authDomain: "smart-burme-app.firebaseapp.com",
+    projectId: "smart-burme-app",
+    storageBucket: "smart-burme-app.appspot.com",
+    messagingSenderId: "851502425686",
+    appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+    
 
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
